--- a/express-template/Dockerfile
+++ b/express-template/Dockerfile
@@ -5,4 +5,7 @@ WORKDIR /home/node
 COPY package.json .
 RUN npm install
 COPY *.js .
+COPY ./controllers/ ./controllers
+COPY ./routes/ ./routes
+COPY ./middlewares/ ./middlewares
 ENTRYPOINT ["node", "index.js"]
