--- a/express-template/docker-compose.yml
+++ b/express-template/docker-compose.yml
@@ -1,9 +1,12 @@
-version: "3.0"
+version: '3.0'
 
 services:
-  express-template:
-    build: 
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - 8080:8080
+    express-template:
+        build: .
+        command: npm start
+        volumes:
+            - ./controllers/:/controllers/
+            - ./routes/:/routes/
+            - ./middlewares/:/middlewares/
+        ports:
+            - 8080:8080
